name:                age
version:             0.1.0.0
synopsis:            Calculate time between a start and end date
description:         Please see README.md
homepage:            https://github.com/werbitt/age#readme
license:             BSD3
license-file:        LICENSE
author:              Micah Werbitt
maintainer:          micah@werbitt.net
copyright:           Copyright: (c) 2016 Micah Werbitt
category:            Time
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
                     , mtl >= 2.2.1
                     , time >= 1.6.0.1
  default-language:    Haskell2010

executable age-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , age
  default-language:    Haskell2010

test-suite age-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Test.hs
  build-depends:       base
                     , age
                     , tasty
                     , tasty-quickcheck
                     , tasty-hunit
                     , time
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/werbitt/age
